methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:11: error: illegal start of statement (no modifiers allowed here)
override def run() {
^